--- a/notebooks/dataset.ipynb
+++ b/notebooks/dataset.ipynb
@@ -246,6 +246,16 @@
    "source": [
     "print(gpt4_chain.predict(incident=incident, root_cause=root_cause))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inc_path = \"/home/tranquility/documents/OpsHarmonySentinel/data/incidents_gpt_4_turbo.csv\"\n",
+    "rc_path = \"/home/tranquility/documents/OpsHarmonySentinel/data/root_causes_gpt_4_turbo.csv\""
+   ]
   }
  ],
  "metadata": {
