--- a/notebooks/finetune.ipynb
+++ b/notebooks/finetune.ipynb
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,9 +262,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "train_path = \"/home/tranquility/documents/OpsHarmonySentinel/data/train.csv\"\n",
+    "df = pd.read_csv(train_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "tokenizer_config.json: 100%|██████████| 1.43k/1.43k [00:00<00:00, 227kB/s]\n",
+      "tokenizer.model: 100%|██████████| 493k/493k [00:00<00:00, 1.11MB/s]\n",
+      "tokenizer.json: 100%|██████████| 1.80M/1.80M [00:01<00:00, 1.21MB/s]\n",
+      "added_tokens.json: 100%|██████████| 42.0/42.0 [00:00<00:00, 20.2kB/s]\n",
+      "special_tokens_map.json: 100%|██████████| 168/168 [00:00<00:00, 154kB/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Get tokenizer\n",
     "import transformers\n",
@@ -277,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,18 +309,21 @@
     "    return [sentence.replace('User:', '').replace('Chip:', '').strip() for sentence in text.split('Assistant:')]\n",
     "\n",
     "def dialogue_to_chat(dialogue):\n",
-    "    out = [{'role': 'system', 'content': 'You are a friendly chatbot assistant.'}]\n",
-    "    for idx, message in enumerate(dialogue):\n",
-    "        role = 'user' if idx%2==0 else 'assistant'\n",
-    "        out.append({'role': role, 'content': message})\n",
+    "    out = [{'role': 'system', 'content': 'You are a friendly chatbot assistant made by HEAL. You are an expert in ITOps, servers, applications and all other related domains.'}]\n",
+    "    # for idx, message in enumerate(dialogue):\n",
+    "    #     role = 'user' if idx%2==0 else 'assistant'\n",
+    "    #     out.append({'role': role, 'content': message})\n",
+    "    input = f\"Investigate and provide root cause for the following incident - {dialogue['incident']}\"\n",
+    "    out.append({'role': 'user', 'content': input})\n",
+    "    out.append({'role': 'assistant', 'content': dialogue['root_cause']})\n",
     "    return out\n",
     "\n",
     "def chat_to_input(chat):\n",
     "    return tokenizer.apply_chat_template(chat, tokenize=False)\n",
     "\n",
     "def process_example(example):\n",
-    "    out = text_to_dialogue(example)\n",
-    "    out = dialogue_to_chat(out)\n",
+    "    # out = text_to_dialogue(example)\n",
+    "    out = dialogue_to_chat(example)\n",
     "    out = chat_to_input(out)\n",
     "    return out"
    ]
@@ -333,7 +360,115 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = [process_example(row) for idx, row in df.iterrows()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<|system|>\n",
+      "You are a friendly chatbot assistant made by HEAL. You are an expert in ITOps, servers, applications and all other related domains.</s>\n",
+      "<|user|>\n",
+      "Investigate and provide root cause for the following incident - [\n",
+      "    {\n",
+      "        \"incidentId\": \"E-21-2-745-2100155821\",\n",
+      "        \"incidentStartTime\": \"04/01/2023 10:35\",\n",
+      "        \"probabilityScore\": 0.89,\n",
+      "        \"anomalyId\": \"AE-21-7524-3-J-S-ALL-38435897\",\n",
+      "        \"anomalyTimestamp\": \"04/01/2023 10:35\",\n",
+      "        \"applicationId\": \"java-webapp\",\n",
+      "        \"instanceId\": \"weblogic-server-001\",\n",
+      "        \"serviceId\": \"weblogic-service\",\n",
+      "        \"kpi\": \"HEAP_MEMORY_USAGE\",\n",
+      "        \"value\": 95.6,\n",
+      "        \"thresholds\": {\"Upper\": 90.0, \"Lower\": 0.0},\n",
+      "        \"violationType\": \"Greater Than\",\n",
+      "        \"tags\": [\n",
+      "            {\"kpi\": \"HeapMemory\"},\n",
+      "            {\"kpiCategory\": \"Memory\"},\n",
+      "            {\"kpiType:\": \"JVM\"},\n",
+      "            {\"anomalyLevel\": \"INSTANCE\"},\n",
+      "            {\"severity\": \"SEVERE\"}\n",
+      "        ],\n",
+      "        \"components\": [\n",
+      "            {\"operatingSystem\": \"Linux\"},\n",
+      "            {\"componentName\": \"Java\"},\n",
+      "            {\"componentVersion\": \"11\"},\n",
+      "            {\"weblogicVersion\": \"12c\"}\n",
+      "        ]\n",
+      "    },\n",
+      "    {\n",
+      "        \"anomalyId\": \"AE-21-7524-3-J-S-ALL-38435898\",\n",
+      "        \"anomalyTimestamp\": \"04/01/2023 10:40\",\n",
+      "        \"applicationId\": \"java-webapp\",\n",
+      "        \"instanceId\": \"weblogic-server-001\",\n",
+      "        \"serviceId\": \"weblogic-service\",\n",
+      "        \"kpi\": \"GARBAGE_COLLECTION_COUNT\",\n",
+      "        \"value\": 12,\n",
+      "        \"thresholds\": {\"Upper\": 5, \"Lower\": 0.0},\n",
+      "        \"violationType\": \"Greater Than\",\n",
+      "        \"tags\": [\n",
+      "            {\"kpi\": \"GarbageCollection\"},\n",
+      "            {\"kpiCategory\": \"Memory\"},\n",
+      "            {\"kpiType:\": \"JVM\"},\n",
+      "            {\"anomalyLevel\": \"INSTANCE\"},\n",
+      "            {\"severity\": \"SEVERE\"}\n",
+      "        ],\n",
+      "        \"components\": [\n",
+      "            {\"operatingSystem\": \"Linux\"},\n",
+      "            {\"componentName\": \"Java\"},\n",
+      "            {\"componentVersion\": \"11\"},\n",
+      "            {\"weblogicVersion\": \"12c\"}\n",
+      "        ]\n",
+      "    },\n",
+      "    {\n",
+      "        \"anomalyId\": \"AE-21-7524-3-J-S-ALL-38435999\",\n",
+      "        \"anomalyTimestamp\": \"04/01/2023 10:45\",\n",
+      "        \"applicationId\": \"java-webapp\",\n",
+      "        \"instanceId\": \"weblogic-server-001\",\n",
+      "        \"serviceId\": \"weblogic-service\",\n",
+      "        \"kpi\": \"OUT_OF_MEMORY_ERROR\",\n",
+      "        \"value\": 1,\n",
+      "        \"thresholds\": {\"Upper\": 0, \"Lower\": 0.0},\n",
+      "        \"violationType\": \"Equal\",\n",
+      "        \"tags\": [\n",
+      "            {\"kpi\": \"OutOfMemoryError\"},\n",
+      "            {\"kpiCategory\": \"Memory\"},\n",
+      "            {\"kpiType:\": \"JVM\"},\n",
+      "            {\"anomalyLevel\": \"INSTANCE\"},\n",
+      "            {\"severity\": \"CRITICAL\"}\n",
+      "        ],\n",
+      "        \"components\": [\n",
+      "            {\"operatingSystem\": \"Linux\"},\n",
+      "            {\"componentName\": \"Java\"},\n",
+      "            {\"componentVersion\": \"11\"},\n",
+      "            {\"weblogicVersion\": \"12c\"}\n",
+      "        ]\n",
+      "    }\n",
+      "]</s>\n",
+      "<|assistant|>\n",
+      "Based on the provided information, the root cause of the incident could be a memory leak in the Java application deployed on WebLogic Server. This is indicated by the steadily increasing heap memory usage and frequent garbage collection events, eventually leading to out-of-memory errors.</s>\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
