Base model vs finetuned resp. comparision

--- a/notebooks/finetune.ipynb
+++ b/notebooks/finetune.ipynb
@@ -286,13 +286,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03823116968b4c7ea871e3de57f73301",
+       "model_id": "c366295d04d44a3da8f074a5cff185e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1395,7 +1395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1413,7 +1413,7 @@
        "'imTheGodFather/OpsHarmonySentinel_7B_alpha'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,102 +1657,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "910155c1cfe64847bb67f099fec49313",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "adapter_config.json:   0%|          | 0.00/581 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "92f85be39fe14d49b6b33fdfa2ccbd5f",
+       "model_id": "87020d52fc9f4447928af19107cdc418",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "Loading checkpoint shards:   0%|          | 0/8 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7727f1d086ca449c8ca108c140c320e5",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "adapter_model.safetensors:   0%|          | 0.00/27.3M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b85c4e5191084b0e8f92cd23482116a8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer_config.json:   0%|          | 0.00/1.51k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "545cf7ed2e6240d6be811fa3b685483d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.model:   0%|          | 0.00/493k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1bcd35deef144e5b9f88c2da73a1bdf7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "tokenizer.json:   0%|          | 0.00/1.80M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9d97e59824a64ea28e3b81ca6e55a398",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "special_tokens_map.json:   0%|          | 0.00/510 [00:00<?, ?B/s]"
       ]
      },
      "metadata": {},
@@ -1827,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1954,7 +1870,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "271aa85e044441da83dead3cc400c6b3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Loading checkpoint shards:   0%|          | 0/8 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# base model\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
+    "\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"HuggingFaceH4/zephyr-7b-beta\", device_map=\"auto\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"HuggingFaceH4/zephyr-7b-beta\", device_map=\"auto\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1966,60 +1910,129 @@
       "<|user|>\n",
       "Analyse and provide root cause for the following ITOps incident - [\n",
       "    {\n",
-      "        \"incidentId\": \"E-12-2-636-1700153821\",\n",
-      "        \"incidentStartTime\": \"11/17/2023 09:23\",\n",
-      "        \"probabilityScore\": 0.75,\n",
-      "        \"anomalyId\": \"AE-12-7458-2-C-LB-ALL-28335900\",\n",
-      "        \"anomalyTimestamp\": \"11/17/2023 09:23\",\n",
-      "        \"applicationId\": \"customer-portal-app\",\n",
-      "        \"serviceId\": \"web-server\",\n",
-      "        \"kpi\": \"REQUEST_COUNT\",\n",
-      "        \"value\": 1200,\n",
-      "        \"thresholds\": {\"Upper\": 0, \"Lower\": 1000},\n",
+      "        \"incidentId\": \"E-12-1-635-1700153820\",\n",
+      "        \"incidentStartTime\": \"11/16/2023 16:57\",\n",
+      "        \"probabilityScore\": 0.82,\n",
+      "        \"anomalyId\": \"AE-12-6224-1-C-S-ALL-28335897\",\n",
+      "        \"anomalyTimestamp\": \"11/16/2023 16:57\",\n",
+      "        \"applicationId\": \"shopping-cart-app\",\n",
+      "        \"instanceId\": \"mysql-percona-153\",\n",
+      "        \"serviceId\": \"mysql-percona-svc\",\n",
+      "        \"kpi\": \"CPU_UTIL\",\n",
+      "        \"value\": 98.44,\n",
+      "        \"thresholds\": {\"Upper\": 0.0, \"Lower\": 85.0},\n",
       "        \"violationType\": \"Greater Than\",\n",
       "        \"tags\": [\n",
-      "            {\"kpi\": \"REQUEST_COUNT\"},\n",
-      "            {\"kpiCategory\": \"Traffic\"},\n",
-      "            {\"anomalyLevel\": \"CLUSTER\"},\n",
-      "            {\"severity\": \"MODERATE\"}\n",
+      "            {\"kpi\": \"CPU\"},\n",
+      "            {\"kpiCategory\": \"CPU\"},\n",
+      "            {\"kpiType\": \"Core\"},\n",
+      "            {\"anomalyLevel\": \"INSTANCE\"},\n",
+      "            {\"severity\": \"SEVERE\"}\n",
       "        ],\n",
       "        \"components\": [\n",
-      "            {\"componentName\": \"Load Balancer\"},\n",
-      "            {\"componentVersion\": \"3.0\"}\n",
+      "            {\"operatingSystem\": \"RHEL_8\"},\n",
+      "            {\"componentName\": \"MySql\"},\n",
+      "            {\"componentVersion\": \"8.0\"}\n",
       "        ]\n",
       "    },\n",
       "    {\n",
-      "        \"anomalyId\": \"AE-12-7458-2-C-LB-ALL-28335901\",\n",
-      "        \"anomalyTimestamp\": \"11/17/2023 09:25\",\n",
-      "        \"applicationId\": \"customer-portal-app\",\n",
-      "        \"serviceId\": \"web-server\",\n",
-      "        \"kpi\": \"RESPONSE_TIME\",\n",
-      "        \"value\": 350,\n",
-      "        \"thresholds\": {\"Upper\": 0, \"Lower\": 250},\n",
+      "        \"anomalyId\": \"AE-12-6224-1-C-S-ALL-28335899\",\n",
+      "        \"anomalyTimestamp\": \"11/16/2023 16:59\",\n",
+      "        \"applicationId\": \"shopping-cart-app\",\n",
+      "        \"instanceId\": \"mysql-percona-153\",\n",
+      "        \"serviceId\": \"mysql-percona-svc\",\n",
+      "        \"kpi\": \"CPU_UTIL\",\n",
+      "        \"value\": 99.2,\n",
+      "        \"thresholds\": {\"Upper\": 0.0, \"Lower\": 85.0},\n",
       "        \"violationType\": \"Greater Than\",\n",
       "        \"tags\": [\n",
-      "            {\"kpi\": \"RESPONSE_TIME\"},\n",
-      "            {\"kpiCategory\": \"Performance\"},\n",
-      "            {\"anomalyLevel\": \"CLUSTER\"},\n",
-      "            {\"severity\": \"MODERATE\"}\n",
+      "            {\"kpi\": \"CPU\"},\n",
+      "            {\"kpiCategory\": \"CPU\"},\n",
+      "            {\"kpiType\": \"Core\"},\n",
+      "            {\"anomalyLevel\": \"INSTANCE\"},\n",
+      "            {\"severity\": \"SEVERE\"}\n",
       "        ],\n",
       "        \"components\": [\n",
-      "            {\"componentName\": \"Load Balancer\"},\n",
-      "            {\"componentVersion\": \"3.0\"}\n",
+      "            {\"operatingSystem\": \"RHEL_8\"},\n",
+      "            {\"componentName\": \"MySql\"},\n",
+      "            {\"componentVersion\": \"8.0\"}\n",
+      "        ]\n",
+      "    },\n",
+      "    {\n",
+      "        \"anomalyId\": \"AE-12-6224-6-C-S-ALL-28335898\",\n",
+      "        \"anomalyTimestamp\": \"11/16/2023 16:58\",\n",
+      "        \"applicationId\": \"shopping-cart-app\",\n",
+      "        \"instanceId\": \"mysql-percona-153\",\n",
+      "        \"serviceId\": \"mysql-percona-svc\",\n",
+      "        \"kpi\": \"LOAD_AVG\",\n",
+      "        \"value\": 11.21,\n",
+      "        \"thresholds\": {\"Upper\": 0.0, \"Lower\": 8.0},\n",
+      "        \"violationType\": \"Greater Than\",\n",
+      "        \"tags\": [\n",
+      "            {\"kpi\": \"LoadAvg\"},\n",
+      "            {\"kpiCategory\": \"CPU\"},\n",
+      "            {\"kpiType\": \"Core\"},\n",
+      "            {\"anomalyLevel\": \"INSTANCE\"},\n",
+      "            {\"severity\": \"SEVERE\"}\n",
+      "        ],\n",
+      "        \"components\": [\n",
+      "            {\"operatingSystem\": \"RHEL_8\"},\n",
+      "            {\"componentName\": \"MySql\"},\n",
+      "            {\"componentVersion\": \"8.0\"}\n",
+      "        ]\n",
+      "    },\n",
+      "    {\n",
+      "        \"anomalyId\": \"AE-12-1031-397-T-S-28335897\",\n",
+      "        \"anomalyTimestamp\": \"11/16/2023 16:57\",\n",
+      "        \"applicationId\": \"shopping-cart-app\",\n",
+      "        \"serviceId\": \"shopping-product-service\",\n",
+      "        \"kpi\": \"RESPONSE_TIME\",\n",
+      "        \"value\": 113.98,\n",
+      "        \"thresholds\": {\"Upper\": 0.0, \"Lower\": 100.0},\n",
+      "        \"violationType\": \"Greater Than\",\n",
+      "        \"tags\": [\n",
+      "            {\"kpi\": \"RESPONSE TIME\"},\n",
+      "            {\"kpiCategory\": \"Workload\"},\n",
+      "            {\"kpiType\": \"Core\"},\n",
+      "            {\"anomalyLevel\": \"CLUSTER\"},\n",
+      "            {\"severity\": \"SEVERE\"}\n",
+      "        ],\n",
+      "        \"components\": [\n",
+      "            {\"operatingSystem\": \"RHEL_8\"},\n",
+      "            {\"componentName\": \"Springboot Micro-service\"},\n",
+      "            {\"javaVersion\": \"8.0\"}\n",
+      "        ]\n",
+      "    },\n",
+      "    {\n",
+      "        \"anomalyId\": \"AE-12-1031-397-T-S-28335899\",\n",
+      "        \"anomalyTimestamp\": \"11/16/2023 16:57\",\n",
+      "        \"applicationId\": \"shopping-cart-app\",\n",
+      "        \"serviceId\": \"shopping-product-service\",\n",
+      "        \"kpi\": \"RESPONSE_TIME\",\n",
+      "        \"value\": 117.92,\n",
+      "        \"thresholds\": {\"Upper\": 0.0, \"Lower\": 100.0},\n",
+      "        \"violationType\": \"Greater Than\",\n",
+      "        \"tags\": [\n",
+      "            {\"kpi\": \"RESPONSE TIME\"},\n",
+      "            {\"kpiCategory\": \"Workload\"},\n",
+      "            {\"kpiType\": \"Core\"},\n",
+      "            {\"anomalyLevel\": \"CLUSTER\"},\n",
+      "            {\"severity\": \"SEVERE\"}\n",
+      "        ],\n",
+      "        \"components\": [\n",
+      "            {\"operatingSystem\": \"RHEL_8\"},\n",
+      "            {\"componentName\": \"Springboot Micro-service\"},\n",
+      "            {\"javaVersion\": \"8.0\"}\n",
       "        ]\n",
       "    }\n",
-      "] \n",
+      "]\n",
+      " \n",
       "<|assistant|>\n",
-      "Based on the provided incidents, it seems that there is an issue with the Load Balancer (LB) at the cluster level. The first anomaly indicates a sudden spike in the number of requests handled by the LB, which may lead to resource exhaustion or high CPU utilization. This could be due to a surge in traffic or misconfigured routing rules causing excessive load on the LB.\n",
-      "\n",
-      "The second anomaly suggests an increase in response time, potentially caused by overloading the LB with too many requests or excessive latency in the backend servers. This could also result from network congestion or excessive resource usage by other applications running on the same machine as the LB.\n",
-      "\n",
-      "Overall, it appears that the LB is not able to handle the increased demand, resulting in poor application performance and potential service disruption. Additional monitoring and troubleshooting should focus on the LB configuration and resource allocation to identify any bottlenecks and address them accordingly. It may also be necessary to scale up the resources allocated to the LB or distribute the workload more evenly across multiple machines to prevent similar issues in the future.\n"
+      "After analyzing the provided ITOps incident data, it is clear that there are multiple anomalies indicating high CPU usage and load average on MySQL server \"mysql-percona-153\" (anomalies 1, 2, and 3) which might be causing slow response time for the shopping product service (anomalies 4 and 5). The root cause could be due to insufficient resources allocated to the MySQL instance or queries with high resource consumption running simultaneously, leading to performance issues for both the database and application services. It's recommended to investigate the query execution plans, identify any resource-intensive queries, and optimize them or consider horizontal scaling of resources to address this issue. Additionally, monitoring the resource utilization and proactively addressing such anomalies can help prevent future incidents.\n"
      ]
     }
    ],
    "source": [
-    "# Try GPTQ finetuned model\n",
     "messages = [\n",
     "    {\"role\": \"system\", \"content\": \"You are a friendly chatbot assistant made by HEAL. You are an expert in ITOps, servers, applications and all other related domains. You answer specifically only to the question asked.\"},\n",
     "    {\"role\": \"user\", \"content\": question},]\n",
