--- a/notebooks/finetune.ipynb
+++ b/notebooks/finetune.ipynb
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c366295d04d44a3da8f074a5cff185e1",
+       "model_id": "258c37e23f8c420895c8831a74fceb33",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1623,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1657,13 +1657,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "87020d52fc9f4447928af19107cdc418",
+       "model_id": "b51eb0e37b4f443190aa483bee03b44e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1743,11 +1743,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"\"\"Analyse and provide root cause for the following ITOps incident - [\n",
+    "question = \"\"\"Analyse and provide root cause for the following ITOps incident. You can use the forensics if any to support \n",
+    "your answer. You should be technically accurate. \n",
+    "[\n",
     "    {\n",
     "        \"incidentId\": \"E-12-1-635-1700153820\",\n",
     "        \"incidentStartTime\": \"11/16/2023 16:57\",\n",
@@ -1840,7 +1842,15 @@
     "            {\"operatingSystem\": \"RHEL_8\"},\n",
     "            {\"componentName\": \"Springboot Micro-service\"},\n",
     "            {\"javaVersion\": \"8.0\"}\n",
-    "        ]\n",
+    "        ],\n",
+    "        \"forensics\": \"CPU Utilization: 98.94%\n",
+    "        Number of CPU cores: 8\n",
+    "        Note: Total of CPU Utilization depends on number of CPU cores and can be > 100%\n",
+    "        -----\n",
+    "        PID USER      PR  NI    VIRT    RES    SHR S  %CPU %MEM     TIME+ COMMAND\n",
+    "        11629 root      20   0   16160    236     20 R  94.1  0.0   4:27.17 batchjob\n",
+    "        14602 heal      20   0 5119288 835492  16448 S  11.8  5.1 398:57.59 mysqld\n",
+    "        \"\n",
     "    },\n",
     "    {\n",
     "        \"anomalyId\": \"AE-12-1031-397-T-S-28335899\",\n",
@@ -1870,13 +1880,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "271aa85e044441da83dead3cc400c6b3",
+       "model_id": "56cbbfba2e954639a592b2ef23f871ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1898,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1908,7 +1918,9 @@
       "<|system|>\n",
       "You are a friendly chatbot assistant made by HEAL. You are an expert in ITOps, servers, applications and all other related domains. You answer specifically only to the question asked. \n",
       "<|user|>\n",
-      "Analyse and provide root cause for the following ITOps incident - [\n",
+      "Analyse and provide root cause for the following ITOps incident. You can use the forensics if any to support \n",
+      "your answer. You should be technically accurate. \n",
+      "[\n",
       "    {\n",
       "        \"incidentId\": \"E-12-1-635-1700153820\",\n",
       "        \"incidentStartTime\": \"11/16/2023 16:57\",\n",
@@ -2001,7 +2013,15 @@
       "            {\"operatingSystem\": \"RHEL_8\"},\n",
       "            {\"componentName\": \"Springboot Micro-service\"},\n",
       "            {\"javaVersion\": \"8.0\"}\n",
-      "        ]\n",
+      "        ],\n",
+      "        \"forensics\": \"CPU Utilization: 98.94%\n",
+      "        Number of CPU cores: 8\n",
+      "        Note: Total of CPU Utilization depends on number of CPU cores and can be > 100%\n",
+      "        -----\n",
+      "        PID USER      PR  NI    VIRT    RES    SHR S  %CPU %MEM     TIME+ COMMAND\n",
+      "        11629 root      20   0   16160    236     20 R  94.1  0.0   4:27.17 batchjob\n",
+      "        14602 heal      20   0 5119288 835492  16448 S  11.8  5.1 398:57.59 mysqld\n",
+      "        \"\n",
       "    },\n",
       "    {\n",
       "        \"anomalyId\": \"AE-12-1031-397-T-S-28335899\",\n",
@@ -2028,7 +2048,7 @@
       "]\n",
       " \n",
       "<|assistant|>\n",
-      "After analyzing the provided ITOps incident data, it is clear that there are multiple anomalies indicating high CPU usage and load average on MySQL server \"mysql-percona-153\" (anomalies 1, 2, and 3) which might be causing slow response time for the shopping product service (anomalies 4 and 5). The root cause could be due to insufficient resources allocated to the MySQL instance or queries with high resource consumption running simultaneously, leading to performance issues for both the database and application services. It's recommended to investigate the query execution plans, identify any resource-intensive queries, and optimize them or consider horizontal scaling of resources to address this issue. Additionally, monitoring the resource utilization and proactively addressing such anomalies can help prevent future incidents.\n"
+      "The root cause of this incident is the high resource utilization of MySQL database server (mysql-percona-153) due to heavy workload on it. The CPU usage of the server has exceeded the threshold limit of 85% at times, reaching as high as 99%. This has also caused the Load Average metric to rise above the threshold limit of 8.0. As a result, the application (shopping-cart-app) hosted on this service is experiencing increased response time, which is more than the configured threshold value of 100ms. Furthermore, the PID output shows that the batch job process (batchjob) is consuming a significant amount of CPU resources, causing contention with the MySQL server processes (mysqld). To address this issue, we recommend scaling up the resources allocated to the MySQL server or optimizing the queries to reduce the load on the server. Additionally, scheduling the batch jobs during low traffic hours or using distributed databases can help alleviate resource contention.\n"
      ]
     }
    ],
