inferencing using GGUF

--- a/notebooks/finetune.ipynb
+++ b/notebooks/finetune.ipynb
@@ -3097,7 +3097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3447,24 +3447,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ctransformers import AutoModelForCausalLM\n",
-    "llm = AutoModelForCausalLM.from_pretrained(r\"/home/paperspace/documents/OpsHarmonySentinel/model/files/ohs-7b-alpha_8q.gguf\", model_type='mistral', gpu_layers=0)"
+    "from ctransformers import AutoModelForCausalLM, AutoConfig\n",
+    "config = AutoConfig.from_pretrained(r\"/home/paperspace/documents/OpsHarmonySentinel/model/files/ohs-7b-alpha_8q.gguf\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# config.max_seq_len = 4096\n",
+    "# config.max_answer_len= 1024\n",
+    "config.config.max_new_tokens = 2048\n",
+    "config.config.context_length = 4096"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = AutoModelForCausalLM.from_pretrained(r\"/home/paperspace/documents/OpsHarmonySentinel/model/files/ohs-7b-alpha_8q.gguf\", model_type='mistral', gpu_layers=0, config=config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of tokens (1703) exceeded maximum context length (512).\n"
+      "\n",
+      "CPU bottleneck is causing high response time for the Springboot microservices. The CPU utilization on instance ‘mysql-percona-153’ is consistently above 98% at the point of anomaly detection, which indicates that there are not enough resources available to serve user requests efficiently. The root cause could be a resource contention issue between MySQL and other applications running on the same host or insufficient CPU capacity for the workload.\n",
+      "\n",
+      "To address this issue, we can consider the following solutions:\n",
+      "\n",
+      "1. Add more CPU cores to the host or scale up instances for CPU intensive workloads such as MySQL database servers to distribute the workload across multiple hosts and free resources on this host for Springboot microservices.\n",
+      "2. Optimize MySQL query performance by using appropriate indexing strategy, tuning SQL queries, or considering horizontal scaling of MySQL databases with replication or sharding techniques.\n",
+      "3. Implement CPU resource allocation policies in Kubernetes to ensure that resource limits are configured correctly for each application container based on their resource requirements and isolate noisy neighbors with cgroups or CPU quotas to avoid excessive CPU usage by one container impacting other containers running on the same host.\n",
+      "4. Use CPU scheduling algorithms such as Completely Fair Scheduler (CFS) in Linux kernel, which can provide more fair CPU allocation to all running applications and reduce CPU contention issues.\n",
+      "5. Implement CPU affinity or pinning techniques to bind specific application containers to particular physical cores for optimal CPU usage and avoid resource contention between multiple containers running on the same host. \n",
+      "\n",
+      "Based on the forensics provided, we can see that the batchjob process (PID: 11629) is taking a significant amount of CPU resources (94.1%) which could be contributing to the high CPU utilization and response time for other applications running on the same host. This could indicate that some queries executed by this job are not optimized or it is using more CPU than necessary. \n",
+      "\n",
+      "Further investigation should be carried out to identify the root cause of this issue, such as analyzing SQL queries executed by this job, checking if there are any long-running queries or indexing issues in MySQL database, and reviewing the application code for any performance bottlenecks. Additionally, we can use profiling tools like Perf, perfstat, or systemtap to get deeper insights into CPU resource consumption, identify hotspots, and optimize the workload accordingly. \n",
+      "\n",
+      "By implementing these solutions, we can mitigate the CPU bottleneck issue, reduce response time for Springboot microservices, improve user experience, and ensure optimal resource utilization for all applications running on this host.\n"
      ]
     }
    ],
